--- a/styles.css
+++ b/styles.css
@@ -145,21 +145,34 @@ h6 {
 
 .card-heading {
   color: var(--clr-white);
+  font-weight: var(--fw-bold);
 }
 
 .card-address {
   color: var(--clr-green);
   font-style: normal;
+  font-weight: var(--fw-semi-bold);
 }
 
 .card-quote {
   color: var(--clr-white);
 }
 
+.card-nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 .card-nav {
+  width: 100%;
 }
 
 .card-nav-link {
   background-color: var(--clr-grey-700);
   color: var(--clr-white);
+  font-weight: var(--fw-semi-bold);
+
+  display: block;
+  text-align: center;
 }
