--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@
   --sp-500: 2.5rem;
   --sp-400: 2rem;
   --sp-300: 1.5rem; /* 24px */
+  --sp-200: 1rem; /* 16px */
   --sp-150: 0.75rem; /* 12px */
   --sp-100: 0.5rem; /* 8px */
   --sp-50: 0.25rem; /* 4px */
@@ -142,12 +143,15 @@ h6 {
   height: 5.625rem;
   width: 5.625rem;
   border-radius: 50%;
+  margin-block-end: var(--sp-300);
 }
 
 .card-heading {
   color: var(--clr-white);
-  font-weight: var(--fw-bold);
+  font-weight: var(--fw-regular);
+  font-size: var(--fs-large);
   text-align: center;
+  letter-spacing: 0.0313rem;
 }
 
 .card-address {
@@ -155,11 +159,14 @@ h6 {
   font-style: normal;
   font-weight: var(--fw-semi-bold);
   text-align: center;
+  font-size: var(--fs-small);
 }
 
 .card-quote {
   color: var(--clr-white);
   text-align: center;
+  margin-block: var(--sp-300);
+  font-size: var(--fs-small);
 }
 
 .card-nav-ul {
@@ -170,7 +177,7 @@ h6 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: var(--sp-150);
+  gap: var(--sp-200);
 }
 
 .card-nav-li {
@@ -185,7 +192,7 @@ h6 {
   background-color: var(--clr-grey-700);
   color: var(--clr-white);
   font-weight: var(--fw-semi-bold);
-
+  font-size: var(--fs-small);
   display: block;
   text-align: center;
 
